[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piped.py"
dynamic = ["version"]
license = { text = "MIT" }
authors = [
  { name="t3tra", email="admin@t3tra.net" },
]
description = "API wrapper for Piped written in Python.\n- [documentation]"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/t3tra-dev/piped.py"
Issues = "https://github.com/t3tra-dev/piped.py/issues"

[tool.setuptools.dynamic]
version = {attr = "piped.__version__"}